# django-forenlims

./: .pre-commit-config.yaml  LICENSE  README.md  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt
.github/workflows/: django.yml
accounts/: admin.py
accounts/migrations/: 0001_initial.py
django_forenlims/: asgi.py  settings.py  urls.py  wsgi.py
frontend/src/application/: index.js
frontend/src/styles/: index.css
frontend/webpack/: webpack.config.dev.js
static_pages/: views.py
templates/: base.html
templates/static_pages/: home.html
