[project]
name = "django-forenlims"
version = "0.0.0"
description = "Laboratory Data Management System for Forensic Medicine"
authors = [
    {name = "Daniel Zaumsegel",email = "daniel.zaumsegel@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
