[project]
name = "django-forenlims"
version = "0.0.0"
description = "Laboratory Data Management System for Forensic Medicine"
authors = [
    {name = "Daniel Zaumsegel",email = "daniel.zaumsegel@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-allauth (>=65.10.0,<66.0.0)",
    "python-webpack-boilerplate (>=1.0.4,<2.0.0)",
    "django-environ (>=0.12.0,<0.13.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pylint = "^3.3.7"
pylint-django = "^2.6.1"
django-debug-toolbar = "6.0.0"


[tool.poetry.group.test.dependencies]
pytest-django = "^4.11.1"

[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120

[tool.djlint]
profile="django"
ignore = "H031"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
select =[
  "DJ",
  "I",
  "N",
  "E",
  "W",
  "PL",
  "RUF",
]
extend-exclude = [
  "manage.py"
]
extend-ignore = [ "RUF012" ]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_forenlims.settings"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]
